--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 @import url('https://fonts.cdnfonts.com/css/tank');
 
 *{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Inter', sans-serif;
  
 }
 
